# user-authentication

backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/endpoints/: auth.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: user_model.py
backend/app/schemas/: user_schema.py
backend/app/services/: auth_service.py
frontend/: README.md  package-lock.json  tsconfig.json
frontend/app/: page.tsx
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/modules/: LoginForm.tsx
frontend/src/components/ui/: Buttons.tsx  Input.tsx
frontend/src/services/: api.js
